--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ html{
 }
 
 body{
-    background: url("./background.jpg");
+    background: url("./background.jpg
+");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
