--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ html{
 }
 
 body{
-    background: url("./background.jpg
-");
+    background: url("./Imagens/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
